--- a/Codding/2021-01-08/Task 1/Advance_Work.html
+++ b/Codding/2021-01-08/Task 1/Advance_Work.html
@@ -14,8 +14,8 @@
 </head>
 <body>
 	<div class="container">
-		<div class="mt-10 mb-50">
-			<img src="img/Cybercom.jpg" class="center">
+		<div class="mt-10 mb-50 center">
+			<img src="img/Cybercom.jpg">
 		</div>
 
 		<h1><b>HTML Practice 1</b></h1>
@@ -43,7 +43,7 @@
 			    </div>
 			</div>
 			<div class="col-md-3">
-				<div class="card border">
+				<div class="card">
 				    <div class="card-body">
 				    	<p class="card-text">215 x 315 px</p>
 			        </div>
@@ -53,7 +53,7 @@
 			    </div>
 			</div>
 			<div class="col-md-3">
-				<div class="card border">
+				<div class="card">
 				    <div class="card-body">
 				    	<p class="card-text">215 x 315 px</p>
 			        </div>
@@ -63,7 +63,7 @@
 			    </div>
 			</div>
 			<div class="col-md-3">
-				<div class="card border">
+				<div class="card">
 				    <div class="card-body">
 				    	<p class="card-text">215 x 315 px</p>
 			        </div>
