--- a/Practice/Hoisting/index.html
+++ b/Practice/Hoisting/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title></title>
+    <title></title>
 </head>
+
 <body>
-	<script src="script.js"></script>
+    <input type="text" name="user" id="userName">
+    <button type="submit" name="Submit" onclick="btnCheck(document.getElementById('userName').value)">Submit</button>
+    <label id="lbl"></label>
+    <script src="script.js"></script>
 </body>
+
 </html>
