--- a/Test/dashbord.html
+++ b/Test/dashbord.html
@@ -1,1 +1,40 @@
-<h1>Hii</h1>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>HTML_Practice 1</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js" integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf" crossorigin="anonymous"></script>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+
+</head>
+
+<body>
+    <div class="col-md-2 left-panel-color">
+        <div class="pt-10 pb-20">
+            <h2>Hello, [Name]</h2>
+        </div>
+        <div class="pt-30">
+            <ul>
+                <li>
+                    <h4><a href="dashbord.html">Dashbord</a></h4>
+                </li>
+                <li>
+                    <h4><a href="dashbord.html">Users</a></h4>
+                </li>
+                <li>
+                    <h4><a href="dashbord.html">Login Session</a></h4>
+                </li>
+                <li>
+                    <h4><a href="Login.html">Logout</a></h4>
+                </li>
+            </ul>
+        </div>
+    </div>
+</body>
+
+</html>
