--- a/Test/Regitstration.html
+++ b/Test/Regitstration.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body>
+<body class="background-color">
     <div class="center mt-50px">
         <div class="border white">
             <h1 class="center mt-10">Login</h1>
