--- a/Test/dashbord.html
+++ b/Test/dashbord.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>HTML_Practice 1</title>
+    <title>Dashbord</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js" integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf" crossorigin="anonymous"></script>
@@ -24,7 +24,7 @@
                     <h4><a href="dashbord.html">Dashbord</a></h4>
                 </li>
                 <li>
-                    <h4><a href="dashbord.html">Users</a></h4>
+                    <h4><a href="user.html">Users</a></h4>
                 </li>
                 <li>
                     <h4><a href="dashbord.html">Login Session</a></h4>
