--- a/Test/Regitstration.html
+++ b/Test/Regitstration.html
@@ -16,7 +16,7 @@
     <div class="center mt-50px">
         <div class="border white">
             <h1 class="center mt-10">Login</h1>
-            <form>
+            <form class="form">
                 <div class="form-group">
                     <label for="firstName">Name</label>
                     <input type="text" class="form-control" id="name" placeholder="Enter Your Name" required>
