--- a/Test/Login.html
+++ b/Test/Login.html
@@ -17,7 +17,7 @@
     <div class="center mt-50px">
         <div class="border white">
             <h1 class="center mt-10">Login</h1>
-            <form>
+            <form class="form">
                 <div class="form-group">
                     <label for="firstName">Email Id</label>
                     <input type="text" class="form-control" id="email" placeholder="Enter Email Id" required>
