--- a/Test/user.html
+++ b/Test/user.html
@@ -38,21 +38,23 @@
     <div class="pt-10 ml">
         <h2>Add User</h2>
         <div class="pt-30">
-            <div class="row">
-                <div class="col">
-                    <input type="text" class="form-control" id="name" placeholder="Enter Name" required>
-                </div>
-                <div class="col">
-                    <input type="text" class="form-control" id="email" placeholder="Enter Email Id" required>
-                </div>
-                <div class="col">
-                    <input type="password" class="form-control" id="pwd" placeholder="Enter Password" required>
-                </div>
-                <div class="col">
-                    <input type="date" class="form-control" id="birthdate" placeholder="Enter Birthdate" required>
-                </div>
-            </div><br><br>
-            <button type="submit" class="btn wood-color">Add User</button>
+            <form>
+                <div class="row">
+                    <div class="col">
+                        <input type="text" class="form-control" id="name" placeholder="Enter Name" required>
+                    </div>
+                    <div class="col">
+                        <input type="text" class="form-control" id="email" placeholder="Enter Email Id" required>
+                    </div>
+                    <div class="col">
+                        <input type="password" class="form-control" id="pwd" placeholder="Enter Password" required>
+                    </div>
+                    <div class="col">
+                        <input type="date" class="form-control" id="birthdate" placeholder="Enter Birthdate" required>
+                    </div>
+                </div><br><br>
+                <button type="submit" class="btn wood-color">Add User</button>
+            </form>
         </div>
         <div class="pt-30">
             <h4 class="pb-20">User List</h4>
@@ -73,7 +75,7 @@
                         <td>abhay@gmail.com</td>
                         <td>1234</td>
                         <td>11/02/1988</td>
-                        <td>33</td>
+                        <td id="age"></td>
                         <td>
                             <button type="button" class="btn btn-primary"> Update </button>
                             <button type="button" class="btn btn-danger"> Delete </button>
@@ -84,5 +86,6 @@
         </div>
     </div>
 </body>
+<script src="js/user.js "></script>
 
 </html>
