--- a/Test/usersession.html
+++ b/Test/usersession.html
@@ -36,28 +36,10 @@
         </div>
 
     </div>
-    <div class="pt-10 ml">
-        <div class="row center">
-            <div class="card width">
-                <div class="card-body color-1">
-                    <h4 class="card-title">User
-                        < 18 Years</h4>
-                            <p class="card-text design">12 Users</p>
-                </div>
-            </div>
-            <div class="card width">
-                <div class="card-body color-2">
-                    <h4 class="card-title"> 18-50 Years User</h4>
-                    <p class="card-text design">12 Users</p>
-                </div>
-            </div>
-            <div class="card width">
-                <div class="card-body color-3">
-                    <h4 class="card-title">Users > 50 Years</h4>
-                    <p class="card-text design">12 Users</p>
-                </div>
-            </div>
-        </div>
+    <div class="text-center">
+        <h1 class="pt-30">Welcom Cybercom Creation</h1>
+        <br><br><br>
+        <h1 style="color: red;">Happy Birthday !</h1>
     </div>
 </body>
 
