--- a/Test/dashbord.html
+++ b/Test/dashbord.html
@@ -27,7 +27,7 @@
                     <h4><a href="user.html">Users</a></h4>
                 </li>
                 <li>
-                    <h4><a href="dashbord.html">Login Session</a></h4>
+                    <h4><a href="loginsession.html">Login Session</a></h4>
                 </li>
                 <li>
                     <h4><a href="Login.html">Logout</a></h4>
@@ -36,7 +36,7 @@
         </div>
 
     </div>
-    <div class="pt-10 ml">
+    <div class="pt-30 ml">
         <div class="row center">
             <div class="card width">
                 <div class="card-body color-1">
