--- a/Test/user.html
+++ b/Test/user.html
@@ -27,7 +27,7 @@
                     <h4><a href="user.html">Users</a></h4>
                 </li>
                 <li>
-                    <h4><a href="dashbord.html">Login Session</a></h4>
+                    <h4><a href="loginsession.html">Login Session</a></h4>
                 </li>
                 <li>
                     <h4><a href="Login.html">Logout</a></h4>
